test/analyze/type_check/adt/enum_variant_inference.exp
Error: Expected type `Option<a>` but found `Int`
test/analyze/type_check/adt/enum_variant_inference.myte:18:13
 18 |   same(None, 1);
    |              ^

Error: Expected type `Int` but found `Option<Int>`
test/analyze/type_check/adt/enum_variant_inference.myte:30:3-16
 30 |   (makeOption(1): Int);
    |    ^^^^^^^^^^^^^

Error: Expected type `Int` but found `Option<Bool>`
test/analyze/type_check/adt/enum_variant_inference.myte:31:3-19
 31 |   (makeOption(true): Int);
    |    ^^^^^^^^^^^^^^^^